[gd_scene load_steps=5 format=2]

[ext_resource path="res://test.gd" type="Script" id=1]
[ext_resource path="res://data/font_tiisame.tres" type="DynamicFont" id=2]
[ext_resource path="res://script/syozihin.gd" type="Script" id=3]
[ext_resource path="res://data/font.tres" type="DynamicFont" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 11.0
margin_top = 43.0
margin_right = 581.0
margin_bottom = 253.0
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="ageru" type="Button" parent="."]
margin_left = 245.0
margin_top = 294.0
margin_right = 332.0
margin_bottom = 337.0
custom_fonts/font = ExtResource( 2 )
text = "あげる"

[node name="tukau" type="Button" parent="."]
margin_left = 253.0
margin_top = 407.0
margin_right = 340.0
margin_bottom = 450.0
custom_fonts/font = ExtResource( 2 )
text = "使う"

[node name="morau" type="Button" parent="."]
margin_left = 257.0
margin_top = 516.0
margin_right = 344.0
margin_bottom = 559.0
custom_fonts/font = ExtResource( 2 )
text = "貰う"

[node name="Button2" type="Button" parent="."]
margin_left = 128.0
margin_top = 236.0
margin_right = 140.0
margin_bottom = 256.0

[node name="PopupPanel" type="PopupPanel" parent="Button2"]
margin_left = 329.0
margin_top = -89.0
margin_right = 641.0
margin_bottom = 163.0

[node name="item" type="Control" parent="Button2/PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Button2/PopupPanel/item"]
margin_left = 8.0
margin_top = 6.0
margin_right = 305.0
margin_bottom = 244.0
color = Color( 0.529412, 0.486275, 0.486275, 0.466667 )

[node name="ScrollContainer" type="ScrollContainer" parent="Button2/PopupPanel/item/ColorRect"]
margin_left = 2.0
margin_top = 1.0
margin_right = 296.0
margin_bottom = 237.0

[node name="VBoxContainer" type="VBoxContainer" parent="Button2/PopupPanel/item/ColorRect/ScrollContainer"]
margin_right = 294.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Button2/PopupPanel/item/ColorRect/ScrollContainer/VBoxContainer"]
margin_right = 294.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
flat = true
expand_icon = true

[node name="modoru" type="Button" parent="Button2/PopupPanel/item"]
margin_left = 226.0
margin_top = 508.0
margin_right = 796.0
margin_bottom = 588.0
custom_fonts/font = ExtResource( 4 )
text = "戻る"

[connection signal="pressed" from="ageru" to="." method="_on_ageru_pressed"]
[connection signal="pressed" from="tukau" to="." method="_on_tukau_pressed"]
[connection signal="pressed" from="morau" to="." method="_on_morau_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button2/PopupPanel/item/modoru" to="Button2/PopupPanel/item" method="_on_modoru_pressed"]
